force-app/main/default/objects/CommonLog__c/CommonLog__c.object-meta.xml
<CustomObject>
    <description>It contains the application logs of the activities performed by the user</description>
    <label>Common Log</label>
    <nameField>
        <displayFormat>Log-{0000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Common Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>