force-app/main/default/objects/CommonLog__c/fields/Feature__c.field-meta.xml
<CustomField>
    <fullName>Feature__c</fullName>
    <description>It contains the feature accessed by the user</description>
    <label>Feature</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Web Order</fullName>
            </value>
            <value>
                <fullName>Web Lead</fullName>
            </value>
            <value>
                <fullName>Net Price Enhanced</fullName>
            </value>
            <value>
                <fullName>ARC Tool</fullName>
            </value>
            <value>
                <fullName>Price Analysis Tool</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>