force-app/main/default/objects/CommonLog__c/fields/SessionId__c.field-meta.xml
<CustomField>
    <fullName>SessionId__c</fullName>
    <description>It contains the user session id, which is performing the event</description>
    <label>Session Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>